# bazel-java-compilation-avoidance

./: .bazelrc  .bazelversion  .gitignore  A.java  B.java  BUILD.bazel  C.java  Main.java  README.md  WORKSPACE  script.sh
lib/: A.java  A2.java  A3.java  ABase.java  BUILD.bazel
patches/: internal-deps-change-in-public.patch  internal-deps-change.patch  new-public-method-in-A.patch  private-B-change-removes-B-to-A-dep.patch  public-B-change-removes-B-to-A-dep.patch
