java_library(
    name = "A",
    srcs = ["A.java"],
)

java_library(
    name = "B",
    srcs = ["B.java"],
    deps = ["A"],
)

java_library(
    name = "C",
    srcs = ["C.java"],
    deps = ["B"],
)

java_binary(
    name = "main",
    main_class = "Main",
    srcs = ["Main.java"],
    deps = ["C"],
)
